--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@react-navigation/native": "^6.1.17",
     "@tanstack/react-query": "^5.45.1",
     "axios": "^1.7.2",
-    "expo": "~51.0.14",
+    "expo": "^51.0.16",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linear-gradient": "^13.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.16",
+    "expo-router": "^3.5.17",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.6",
+    "expo-updates": "~0.25.18",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -35,8 +36,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.2.0",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -44,7 +45,7 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
-    "jest-expo": "~51.0.1",
+    "jest-expo": "^51.0.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
